--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-dom": "^18.2.19",
     "chart.js": "^4.4.1",
+    "graphql-request": "^6.1.0",
+    "json-loader": "^0.5.7",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
