--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +21,7 @@
     "react-helmet-async": "^2.0.4",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "utf8": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
